<resources>
    <string name="app_name">海德汇</string>
    <string name="app_id">haidehui</string>
    <string name="app_chinese_name">海德汇版本更新</string>

    <!--首页（公司、团队、平台等介绍）-->
    <string name="company_introduction">&#160;&#160;&#160;&#160;北京君德聚富投资顾问有限公司，自成立以来致力于为国内高净值人群提供专业化、个性化、全方位的海外资产配置服务。作为北京君德财富投资管理股份有限公司的控股子公司君德聚富，让客户充分感受到一站式配置服务的便利，并且秉承一心一意为客户服务的理念，累计服务客户6000多人，客户资产管理规模达到60多亿。致力于做海外资产配置的领航者，持续为客户创造价值！</string>
    <string name="company_introduction1">&#160;&#160;&#160;&#160;君德聚富合作的机构有： 中国银行、招商银行、中国工商银行、汇丰银行、渣打银行、曼谷银行、大成银行、开泰银行、友邦保险、保成保险、中银保险、著名开发商BLUE SKY、经典项目CITYGATE、THE ROOM、潮州商会、大使馆、领事馆取得深度的合作。</string>

    <string name="team_introduction">&#160;&#160;&#160;&#160;君德海外团队成员拥有广泛的海内外房地产行业人脉、丰富的金融资产管理经验和独立的互联网技术开发能力。核心团队由资深海外房地产人士与国内资产管理行业专家组成，熟悉海外房产市场，有能力对上游产品及下游渠道实行严格的风控甄选及精准获取，并凭借对行业动态的专业掌控及解读，充分发挥平台的专业价值，维持平台合伙人的长久黏性。同时在海外拥有一支强大的服务团队，在海外享受高端的客户体验服务。</string>

    <string name="platform_introduction">&#160;&#160;&#160;&#160;君德海外事业合伙人平台产品体系分为七大板块：全球海外房产、海外保险、全球移民、高端医疗、海外高尔夫、海外旅游，留学及就业服务。</string>
    <string name="platform_introduction1">&#160;&#160;&#160;&#160;君德海外事业合伙人平台提供的服务种类包括：产品培训及销售咨询服务，销售体系搭建建议，人才支持，互联网营销支持，海外签约旅游考察安排，海外房产管理等一系列专业海外资产配置周边服务。</string>

    <!-- 首页 -->
    <string name="oversea_project">海外项目</string>
    <string name="hot_investment">投资热点</string>

    <!-- 登录 -->
    <string name="login_title">一站式海外资产配置平台</string>
    <string name="login_phone">手机号：</string>
    <string name="login_password">密码：</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_sign">注册</string>
    <string name="login_name">登录</string>

    <!-- 注册 -->
    <string name="sign_phone_name">手机号码</string>
    <string name="sign_verify">验证码</string>
    <string name="sign_password">请输入登录密码</string>
    <string name="sign_real_name">真实姓名</string>
    <string name="sign_recommendation">推荐码</string>
    <string name="sign_get_verify">获取验证码</string>
    <string name="sign_agree">我已阅读并同意</string>
    <string name="sign_web">《海德汇》</string>
    <string name="sign_agree_two">服务协议。</string>
    <string name="sign_btn_name">立即注册</string>
    <string name="sign_getsms_again">重新获取</string>

    <!-- 找回密码 -->
    <string name="findpassword_titile">密码找回</string>
    <string name="findpassword_phone">注册的手机号</string>
    <string name="findpassword_verify_code_mess">请输入注册手机号收到的短信验证码。</string>
    <string name="findpassword_password">新密码</string>
    <string name="findpassword_password_new">确认密码</string>
    <string name="findpassword_btn">密码重置</string>

    <!-- 消息模块 -->
    <string name="message_title">消息</string>
    <string name="message_info">账本消息</string>
    <string name="message_notice">公告通知</string>
    <string name="message_other">其它</string>
    <string name="message_nodata">暂无数据</string>
    <string name="message_info_nodata">暂无账本消息</string>
    <string name="message_notice_nodata">暂无公告消息</string>
    <string name="message_other_nodata">暂无其它消息</string>
    <string name="message_notice_detail">详情</string>
    <string name="message_other_detail">详情</string>

    <!-- 设置模块 -->
    <string name="setting_title">设置</string>
    <string name="setting_change_phone">修改手机号</string>
    <string name="setting_gesture_password">手势密码</string>
    <string name="setting_change_gesture_password">修改手势密码</string>
    <string name="setting_change_password">修改登录密码</string>
    <string name="setting_service_agreement">服务协议</string>
    <string name="setting_sign_agreement">海德汇协议</string>
    <string name="setting_privacy_agreement">隐私协议</string>
    <string name="setting_advice">意见反馈</string>
    <string name="setting_invite">推荐APP给朋友</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_version">版本号</string>
    <string name="setting_change_phone_first">请输入当前登录密码</string>
    <string name="setting_change_phone_first_title">验证登录密码</string>
    <string name="setting_change_phone_next">下一步</string>
    <string name="setting_change_phone_second">请输入新手机号码</string>
    <string name="setting_change_phone_second_phone">当前手机号：</string>
    <string name="setting_change_phone_second_title">修改手机号</string>
    <string name="setting_change_phone_third_title">填写验证码</string>
    <string name="setting_change_phone_third_message">短信验证码已发送，请填写验证码</string>
    <string name="setting_change_phone_third_verifycode">请输入验证码</string>
    <string name="setting_change_phone_third_submit">提   交</string>
    <string name="setting_change_password_sure">确   定</string>
    <string name="setting_change_password_old">旧密码</string>
    <string name="setting_change_password_new">新密码（8-16位字母数字组合）</string>
    <string name="setting_change_password_new_again">确认密码</string>
    <string name="setting_change_password_title">修改密码</string>
    <string name="setting_advice_edit">请输入您的意见及建议，我们将为您不断改进！</string>
    <string name="setting_advice_sevice">如有疑问，您也可以直接联系：</string>
    <string name="setting_recommend_title">推荐APP给好友</string>
    <string name="setting_recommend_btn">推荐给朋友</string>
    <string name="setting_recommend_rule">推荐规则</string>
    <string name="setting_recommend_record">推荐记录</string>
    <string name="setting_recommend_des">推荐说明：</string>
    <string name="setting_recommend_des_1">1、您注册海德汇成功后会自动生成一个您的专属推荐码。</string>
    <string name="setting_recommend_des_2">2、您可以通过微信、微信朋友圈、新浪微博、QQ、短信、扫描二维码等方式分享给您的好友，也可以让您身边的好友在注册海德汇时，输入您的推荐码。</string>
    <string name="setting_recommend_des_3">3、好友通过推荐链接或输入您的推荐码成功注册后则您和您的好友将建立推荐与被推荐关系，推荐的好友成单后，您可以获得相应金额的推荐奖励。</string>
    <string name="setting_recommend_des_4">4、若您的好友注册时未填写您的推荐码或未通过您的推荐链接注册，则推荐关系不成立。</string>
    <string name="setting_recommend_record_name">推荐好友成单获得推荐奖励！</string>
    <string name="setting_recommend_friend">推荐好友</string>
    <string name="setting_recommend_level">推荐级别</string>
    <string name="setting_recommend_account">总共为您赚了</string>
    <string name="setting_logout">退出登录</string>

    <!-- 手势密码 -->
    <string name="gesture_edit_title">解锁</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="title_changegesture">修改手势密码</string>
    <string name="set_gesture_pattern_old">绘制旧解锁图案</string>

    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>

    <string name="set_gesture_pattern_jump">跳过</string>
    <string name="title_gestureset">设置手势密码</string>

    <!-- 我的银行卡 -->
    <string name="mybank_title">我的银行卡</string>
    <string name="mybank_add_card">添加银行卡</string>
    <string name="mybank_add_card_verify_code">输入短信验证码</string>
    <string name="mybank_add_card_real_name">输入您的真实姓名</string>
    <string name="mybank_add_card_idcard">输入您的身份证号</string>
    <string name="mybank_add_card_bank_name">输入银行名称</string>
    <string name="mybank_add_card_bank_address">输入开户行所在地</string>
    <string name="mybank_add_card_bank_number">输入银行卡号</string>
    <string name="mybank_add_card_title">请绑定本人的储蓄卡</string>
    <string name="mybank_add_card_button">确认添加</string>
    <string name="mybank_add_nodata">暂未添加银行卡</string>

    <!-- 提现 -->
    <string name="withdraw_choose_bank_title">选择提现账户</string>
    <string name="withdraw_confirm_input">请输入提现金额</string>
    <string name="withdraw_input_verify">请输入短信验证码</string>
    <string name="withdraw_button">申请提现</string>
    <string name="withdraw_message">确认提现后预计在5个工作日内到账！</string>

    <!-- 邀请好友内容 -->
    <string name="shared_message">海德汇致力于打造最专业的客户服务，提供最前沿的海外产品，组织最舒适的线下体验，承办全方位的社交活动！</string>

    <!-- 客服电话 -->
    <string name="phone_number_format">4000000314</string>
    <string name="phone_number">4000000314</string>

    <!-- 标题 -->
    <string name="net_fail_text">当前网络不可用，点此检查网络设置</string>
    <string name="title_null"></string>
    <string name="title_hot_house">最热房源</string>
    <string name="title_oversea_project">海外项目</string>
    <string name="title_oversea_project_detail">项目详情</string>
    <string name="title_house_detail">房源详情</string>
    <string name="title_my_info">我的信息</string>
    <string name="title_customer_info">客户信息</string>
    <string name="title_explain_order">预约说明会</string>
    <string name="title_add_customer">新增客户</string>
    <string name="title_edit_customer_info">客户信息</string>
    <string name="title_submit_info">添加客户信息</string>
    <string name="title_partner_identify">事业合伙人认证</string>
    <string name="title_account_book">账本</string>
    <string name="title_commission_details">收益详情</string>
    <string name="title_award_details">奖励详情</string>
    <string name="title_withdraw_details">提现详情</string>
    <string name="title_rengou_status">认购状态</string>
    <string name="title_customer_follow">客户跟踪</string>
    <string name="title_customer_follow_details">跟踪详情</string>
    <string name="title_rengou_details">认购详情</string>
    <string name="title_add_customer_follow">添加跟踪</string>
    <string name="title_edit_info">修改客户信息</string>
    <string name="title_business_partner">我的事业合伙人</string>
    <string name="title_mine">我的</string>

    <!-- 认购的三种状态 -->
    <string name="btn_subscribed">已认购</string>
    <string name="btn_transfer_contract">转签约</string>
    <string name="btn_unsubscribed">已退订</string>

    <!--认购详情-->
    <string name="rengou_detail_customer_name">客户姓名</string>
    <string name="rengou_detail_phone">联系电话</string>
    <string name="rengou_detail_status">认购状态:</string>
    <string name="rengou_detail_project_name">项目名称:</string>
    <string name="rengou_detail_room_num">认购房号:</string>
    <string name="rengou_detail_deposit_amount">定金金额:</string>

    <!--跟踪详情-->
    <string name="tracking_information">已电话联络客户，简单介绍项目；\n已发项目资料，回答客户疑问；\n已和客户面谈，详细介绍项目；
        \n客户已参加公司推介会,深度了解项目；\n再次回访客户，回答客户疑问；\n客户确定赴实地看房团行程；</string>

    <!--我的模块-->
    <string name="my_business">我的生意</string>
    <string name="customer_info">客户信息</string>
    <string name="customer_follow">客户跟踪</string>
    <string name="subscription_state">认购状态</string>
    <string name="explain_order">预约说明会</string>
    <string name="my_account_book">我的账本</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="business_partner_certification">事业合伙人认证</string>
    <string name="my_business_partner">我的事业合伙人</string>

    <!-- 房源详情 -->
    <string name="house_prise">价格</string>
    <string name="living_room">居室</string>
    <string name="house_area">面积</string>
    <string name="essential_info">基本信息</string>
    <string name="purchase_cost">购房费用</string>
    <string name="purchase_flow">购房流程</string>
    <string name="property_consultant">置业顾问</string>

    <!-- 我的信息 -->
    <string name="name">姓名</string>
    <string name="work_unit">工作单位</string>
    <string name="et_hint_work_unit">输入工作单位</string>
    <string name="weChat_code">微信二维码</string>
    <string name="introduce_myself">自我介绍</string>
    <string name="btn_save">保存</string>


</resources>
