<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        >
        <TextView
            android:id="@+id/tv_recommend_record_friend"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_recommend_friend"
            android:textColor="@color/txt_gray"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_recommend_record_level"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_recommend_level"
            android:textColor="@color/txt_gray"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_recommend_record_account"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_recommend_account"
            android:textColor="@color/txt_gray"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>
