<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/advice_edt"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:background="@color/white"
            android:hint="@string/setting_advice_edit"
            android:maxLength="500"
            android:minLines="10"
            android:gravity="top"
            android:padding="8dip"
            android:inputType="textMultiLine"
            android:textSize="15.0sp"
            android:textCursorDrawable="@drawable/color_cursor"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_advice_sevice"
                android:layout_marginLeft="10dip"
                android:textColor="@color/txt_gray"
                android:textSize="13sp"
                android:layout_marginTop="10dip"
                />
            <TextView
                android:id="@+id/tv_advice_call_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_format"
                android:textColor="@color/txt_orange"
                android:textSize="13sp"
                android:layout_marginTop="10dip"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn_advice"
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_center_gray"
        android:text="@string/setting_change_phone_third_submit"
        android:textColor="@color/txt_white"
        android:textSize="15sp"
        />


</RelativeLayout>
