<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_work_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_unit"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_work_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_work_unit"
            android:background="@color/white"
            android:gravity="right"
            android:hint="@string/et_hint_work_unit"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/gray_dark"
            android:textSize="15sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_center_orange"
        android:text="@string/btn_save"
        android:textColor="@color/white"/>
</RelativeLayout>
