<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/gray_light"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_subscribed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_center_white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_subscribed"
            android:textColor="@color/bg_btn_orange"/>

        <TextView
            android:id="@+id/tv_to_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_center_white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_transfer_contract"
            android:textColor="@color/gray_d"/>

        <TextView
            android:id="@+id/tv_unsubscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_center_white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_unsubscribed"
            android:textColor="@color/gray_d"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
